# serializer version: 1
# name: test_mixed_literal_invalid[mode]
  1 validation error for MixedLiteralConfig
  mode
    Input should be 'train', 1 or True [type=literal_error, input_value='invalid', input_type=str]
      For further information visit https://errors.pydantic.dev/2.11/v/literal_error
# ---
# name: test_mixed_literal_invalid[size]
  1 validation error for MixedLiteralConfig
  size
    Input should be 'small', 20 or False [type=literal_error, input_value=15, input_type=int]
      For further information visit https://errors.pydantic.dev/2.11/v/literal_error
# ---
# name: test_string_literal_invalid
  1 validation error for StringLiteralConfig
  mode
    Input should be 'train', 'test' or 'eval' [type=literal_error, input_value='invalid', input_type=str]
      For further information visit https://errors.pydantic.dev/2.11/v/literal_error
# ---
